--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+temp
+out
+outImages*
+get-image-from-site.zip
+get-i
+/node_modules/
+yarn.lock
+dist
+flow-typed
+.tern-port
+
 # Logs
 logs
 *.log
